fix: change title gap size

--- a/src/sass/blocks/help.scss
+++ b/src/sass/blocks/help.scss
@@ -10,6 +10,7 @@
 }
 
 .help__title {
+  margin-bottom: 60px;
   max-width: 310px;
   text-align: center;
 }
